--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "yeoman-generator": "2.0.5",
-    "semver": "~2.3.0",
+    "semver": "4.3.2",
     "debug": "~1.0.2",
     "rimraf": "~2.2.8"
   }
